Add binary in ignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 ﻿##This project
 bin/*
+lib-properties.a
 
 #C++ gitignore -------------------------------------------------------------------------------
 
